--- a/index.html
+++ b/index.html
@@ -94,18 +94,19 @@
   </div>
   <h1>KANGMARKUS</h1>
   <div class="description">
-    TOGEL ONLINE / GAMES BOLA TERNAMA SEPERTI SBOBET SPORTS, SABA SPORTS, PINNACLE SPORTS. SLOT, LIVEGAMES SERTA PERMAINAN TEMBAK IKAN<br><br>
+    ANGKA ONLINE / GAMES BOLA TERNAMA SEPERTI SBOBET SPORTS, SABA SPORTS, PINNACLE SPORTS. SLOT, LIVEGAMES SERTA PERMAINAN TEMBAK IKAN<br><br>
     <strong>HADIAH FULLBET</strong><br>
-    4D x 10.000 / 3D x 1.000 / 2D x 100 (Termasuk TotoMacau)<br><br>
+    4D x 10.000 / 3D x 1.000 / 2D x 100 
+    (Termasuk TotoMacau)<br><br>
     <strong>Minimal Deposit Rp.10,000 dan Withdraw Rp.50,000</strong>
   </div>
   <div class="menu">
     <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank">Login</a>
     <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank">Daftar</a>
     <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank">RTP SLOT</a>
-    <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank">Live Chat</a>
+    <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank">Live Chat Admin</a>
     <a href="https://www.youtube.com/@anshun168" target="_blank">YouTube</a>
-    <a href="https://wa.me/6282310203030" target="_blank">WhatsApp</a>
+    <a href target="_blank">0823-1020-3030</a>
   </div>
 </body>
 </html>
