--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank">Daftar</a>
     <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank">RTP SLOT</a>
     <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank">Live Chat Admin</a>
-    <a href="https://www.youtube.com/@anshun168" target="_blank">YouTube</a>
+    <a href="https://www.youtube.com/@kangmarkuss" target="_blank">YouTube</a>
     <a href target="_blank">0823-1020-3030</a>
   </div>
 </body>
