--- a/index.html
+++ b/index.html
@@ -2,111 +2,118 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KANGMARKUS</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Poppins', sans-serif;
       background-color: #0d0d0d;
-      color: #ffffff;
+      color: #fff;
       text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: start;
-      min-height: 100vh;
-    }
-
-    .profile {
-      margin-top: 40px;
-    }
-
-    .profile img {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid #b30000;
-      box-shadow: 0 0 20px rgba(255, 0, 0, 0.4);
     }
 
     h1 {
-      font-size: 32px;
-      margin: 20px 0 10px 0;
-      letter-spacing: 1px;
+      margin-top: 30px;
+      font-size: 34px;
+      letter-spacing: 2px;
+      color: #ff4d4d;
     }
 
     .description {
-      font-size: 14px;
-      max-width: 90%;
-      color: #cccccc;
-      margin-bottom: 25px;
+      margin: 15px 20px;
+      font-size: 16px;
       line-height: 1.6;
+      color: #ccc;
     }
 
     .menu {
-      width: 90%;
-      max-width: 360px;
+      margin: 40px auto;
       display: flex;
       flex-direction: column;
+      align-items: center;
       gap: 15px;
-      margin-top: 10px;
+      max-width: 400px;
     }
 
     .menu a {
-      padding: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
       text-decoration: none;
-      font-weight: bold;
+      padding: 14px 24px;
+      border-radius: 10px;
       color: #fff;
-      background-color: #8b0000;
-      border-radius: 12px;
-      text-transform: uppercase;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      animation: pulse 2s infinite;
+      background-color: #222;
+      width: 100%;
       font-size: 16px;
+      transition: all 0.3s ease;
+      border: 1px solid #444;
     }
 
     .menu a:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+      background-color: #444;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.5);
     }
 
-    .menu a:first-child,
-    .menu a:nth-child(2) {
-      font-size: 22px;
-      padding: 26px;
-      background-color: #a00000;
+    /* Login & Daftar Special Style */
+    .menu .login,
+    .menu .daftar {
+      font-size: 18px;
+      font-weight: bold;
+      border: 2px solid #000;
     }
 
-    @keyframes pulse {
-      0% { box-shadow: 0 0 5px rgba(255,0,0,0.4); }
-      50% { box-shadow: 0 0 20px rgba(255,0,0,0.8); }
-      100% { box-shadow: 0 0 5px rgba(255,0,0,0.4); }
+    .menu .login {
+      background-color: #fff;
+      color: #000;
+    }
+
+    .menu .daftar {
+      background-color: #c20000;
+      color: #fff;
+      animation: blink 1s infinite alternate;
+    }
+
+    @keyframes blink {
+      from { opacity: 1; }
+      to { opacity: 0.7; }
+    }
+
+    /* Responsive */
+    @media (max-width: 480px) {
+      .menu a {
+        font-size: 15px;
+        padding: 12px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="profile">
-    <img src="profile_circle.png" alt="Kang Markus" />
-  </div>
+
   <h1>KANGMARKUS</h1>
+
   <div class="description">
-    ANGKA ONLINE / GAMES BOLA TERNAMA SEPERTI SBOBET SPORTS, SABA SPORTS, PINNACLE SPORTS. SLOT, LIVEGAMES SERTA PERMAINAN TEMBAK IKAN<br><br>
+    ANGKA ONLINE / GAMES BOLA TERNAMA SEPERTI SBOBET SPORTS, SABA SPORTS, PINNACLE SPORTS, SLOT, LIVEGAMES SERTA PERMAINAN TERBAIK<br>
     <strong>HADIAH FULLBET</strong><br>
-    4D x 10.000 / 3D x 1.000 / 2D x 100 
-    (Termasuk TotoMacau)<br><br>
+    4D x 10.000 / 3D x 1.000 / 2D x 100<br>
+    (Termasuk TotoMacau)<br>
     <strong>Minimal Deposit Rp.10,000 dan Withdraw Rp.50,000</strong>
   </div>
+
   <div class="menu">
-    <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank">Login</a>
-    <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank">Daftar</a>
-    <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank">RTP SLOT</a>
-    <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank">Live Chat Admin</a>
-    <a href="https://www.youtube.com/@kangmarkuss" target="_blank">YouTube</a>
-    <a href target="_blank">0823-1020-3030</a>
+    <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank" class="login">🔐 Login</a>
+    <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank" class="daftar">📝 Daftar</a>
+    <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank">🎰 RTP SLOT</a>
+    <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank">💬 Live Chat Admin</a>
+    <a href="https://www.youtube.com/@kangmarkuss" target="_blank">📺 YouTube</a>
+    <a href="https://wa.me/6282310203030" target="_blank">📱 0823-1020-3030</a>
   </div>
+
 </body>
 </html>
