--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     ANGKA ONLINE / BET ANGKA, GAMES BOLA TERNAMA SEPERTI SBOBET SPORTS, SABA SPORTS, PINNACLE SPORTS. SLOT, LIVEGAMES SERTA PERMAINAN TEMBAK IKAN<br><br>
     <strong>HADIAH FULLBET</strong><br>
     4D x 10.000 / 3D x 1.000 / 2D x 100 (Termasuk TOTOMACAU)<br><br>
-    <strong>Minimal Deposit Rp.10,000 dan Withdraw Rp.50,000</strong>
-    <strong>AMAN DAN AMANAH</strong>
+    <strong>Minimal Deposit Rp.10,000 dan Withdraw Rp.50,000</strong><br>
+     AMAN DAN AMANAH
   </div>
   <div class="menu">
     <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank">Login</a>
