--- a/index.html
+++ b/index.html
@@ -108,5 +108,9 @@
     <a href="https://www.youtube.com/@anshun168" target="_blank">YouTube</a>
     <a href="https://wa.me/6282310203030" target="_blank">WhatsApp</a>
   </div>
+    <footer>
+    &copy; 2025 kangmarkus.com | Semua Hak Dilindungi
+  </footer>
+  
 </body>
 </html>
