--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   </div>
   <div class="menu">
     <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank">Login</a>
+     <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank">Login Alternatif</a>
     <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank">Daftar</a>
     <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank">RTP SLOT</a>
     <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank">Live Chat Admin</a>
