--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
      AMAN DAN AMANAH
   </div>
   <div class="menu">
-    <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank">Login</a>
-     <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank">Login Alternatif</a>
-    <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank">Daftar</a>
-    <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank">RTP SLOT</a>
-    <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank">Live Chat Admin</a>
-    <a href="https://www.youtube.com/@anshun168" target="_blank">YouTube</a>
-    <a href="https://wa.me/6282310203030" target="_blank">WhatsApp</a>
+    <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />Login</a>
+    <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />Login Alternatif</a>
+    <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />Daftar</a>
+    <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />RTP SLOT</a>
+    <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />Live Chat Admin</a>
+    <a href="https://www.youtube.com/@anshun168" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />YouTube</a>
+    <a href="https://wa.me/6282310203030" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />WhatsApp</a>
   </div>
     <footer>
     &copy; 2025 kangmarkus.com | Semua Hak Dilindungi
