--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
     }
   </style>
 </head>
+    width: 30px;
+  height: auto;
 <body>
   <div class="profile">
     <img src="profile_circle.png" alt="Kang Markus" />
