--- a/index.html
+++ b/index.html
@@ -89,8 +89,17 @@
     }
   </style>
 </head>
-    width: 30px;
+.menu a {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.menu-icon {
+  width: 30px;  /* Ukuran ikon */
   height: auto;
+}
 <body>
   <div class="profile">
     <img src="profile_circle.png" alt="Kang Markus" />
