--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KANGMARKUS</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <style>
     body {
       margin: 0;
@@ -58,7 +57,11 @@
     }
 
     .menu a {
-      padding: 18px;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      justify-content: flex-start;
+      padding: 16px;
       text-decoration: none;
       font-weight: bold;
       color: #fff;
@@ -77,9 +80,15 @@
 
     .menu a:first-child,
     .menu a:nth-child(2) {
-      font-size: 22px;
-      padding: 26px;
+      font-size: 20px;
+      padding: 20px;
       background-color: #a00000;
+    }
+
+    .menu-icon {
+      width: 26px;
+      height: 26px;
+      object-fit: contain;
     }
 
     @keyframes pulse {
@@ -89,41 +98,47 @@
     }
   </style>
 </head>
-.menu a {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 10px;
-}
-
-.menu-icon {
-  width: 30px;  /* Ukuran ikon */
-  height: auto;
-}
 <body>
   <div class="profile">
     <img src="profile_circle.png" alt="Kang Markus" />
   </div>
+
   <h1>KANGMARKUS</h1>
+
   <div class="description">
     ANGKA ONLINE / BET ANGKA, GAMES BOLA TERNAMA SEPERTI SBOBET SPORTS, SABA SPORTS, PINNACLE SPORTS. SLOT, LIVEGAMES SERTA PERMAINAN TEMBAK IKAN<br><br>
     <strong>HADIAH FULLBET</strong><br>
     4D x 10.000 / 3D x 1.000 / 2D x 100 (Termasuk TOTOMACAU)<br><br>
     <strong>Minimal Deposit Rp.10,000 dan Withdraw Rp.50,000</strong><br>
-     AMAN DAN AMANAH
+    AMAN DAN AMANAH
   </div>
+
   <div class="menu">
-    <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />Login</a>
-    <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />Login Alternatif</a>
-    <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />Daftar</a>
-    <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />RTP SLOT</a>
-    <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />Live Chat Admin</a>
-    <a href="https://www.youtube.com/@anshun168" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />YouTube</a>
-    <a href="https://wa.me/6282310203030" target="_blank"><img src="logo-removebg-preview.png" alt="logo" />WhatsApp</a>
+    <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank">
+      <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> Login
+    </a>
+    <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank">
+      <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> Login Alternatif
+    </a>
+    <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank">
+      <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> Daftar
+    </a>
+    <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank">
+      <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> RTP Slot
+    </a>
+    <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank">
+      <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> Live Chat Admin
+    </a>
+    <a href="https://www.youtube.com/@anshun168" target="_blank">
+      <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> YouTube
+    </a>
+    <a href="https://wa.me/6282310203030" target="_blank">
+      <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> WhatsApp
+    </a>
   </div>
-    <footer>
+
+  <footer>
     &copy; 2025 kangmarkus.com | Semua Hak Dilindungi
   </footer>
-  
 </body>
 </html>
