--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank">
       <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> Live Chat Admin
     </a>
-    <a href="https://www.youtube.com/@anshun168" target="_blank">
+    <a href="https://www.youtube.com/@kangmarkuss" target="_blank">
       <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> YouTube
     </a>
     <a href="https://wa.me/6282310203030" target="_blank">
