--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <h1>KANGMARKUS</h1>
 
   <div class="description">
-    ANGKA ONLINE / BET ANGKA, GAMES BOLA TERNAMA SEPERTI SBOBET SPORTS, SABA SPORTS, PINNACLE SPORTS. SLOT, LIVEGAMES SERTA PERMAINAN TEMBAK IKAN<br><br>
+    KANGMARKUS.COM /KANG MARKUS / ANGKA ONLINE / BET ANGKA, GAMES BOLA TERNAMA SEPERTI SBOBET SPORTS, SABA SPORTS, PINNACLE SPORTS. SLOT, LIVEGAMES SERTA PERMAINAN TEMBAK IKAN<br><br>
     <strong>HADIAH FULLBET</strong><br>
     4D x 10.000 / 3D x 1.000 / 2D x 100 (Termasuk TOTOMACAU)<br><br>
     <strong>Minimal Deposit Rp.10,000 dan Withdraw Rp.50,000</strong><br>
@@ -132,13 +132,12 @@
     <a href="https://www.youtube.com/@kangmarkuss" target="_blank">
       <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> YouTube
     </a>
-    <a href="https://wa.me/6282310203030" target="_blank">
-      <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> WhatsApp
+      <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> WA 0823-1020-3030
     </a>
   </div>
 
   <footer>
-    &copy; 2025 kangmarkus.com | Semua Hak Dilindungi
+    &copy; 2025 Kangmarkus.com | Semua Hak Dilindungi  | © Copyright 2014 - 2025 Kangmarkus 
   </footer>
 </body>
 </html>
