--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <a href="https://www.youtube.com/@kangmarkuss" target="_blank">
       <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> YouTube
     </a>
+       <a href="https://kangmarkus.com" target="_blank">
       <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> WA 0823-1020-3030
     </a>
   </div>
