--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0d0d0d;
-      color: #ffffff;
+      background: radial-gradient(circle at top, #1a0000 0%, #000 100%);
+      color: #fff;
       text-align: center;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: start;
       min-height: 100vh;
+      overflow-x: hidden;
     }
 
     .profile {
@@ -25,80 +26,137 @@
     }
 
     .profile img {
-      width: 150px;
-      height: 150px;
+      width: 160px;
+      height: 160px;
       border-radius: 50%;
       object-fit: cover;
       border: 4px solid #b30000;
-      box-shadow: 0 0 20px rgba(255, 0, 0, 0.4);
+      box-shadow: 0 0 25px rgba(255, 0, 0, 0.6);
+      transition: transform 0.4s ease;
+    }
+
+    .profile img:hover {
+      transform: scale(1.05);
     }
 
     h1 {
-      font-size: 32px;
+      font-size: 38px;
       margin: 20px 0 10px 0;
-      letter-spacing: 1px;
+      color: #ff1a1a;
+      letter-spacing: 1.5px;
+      text-shadow: 0 0 15px rgba(255, 0, 0, 0.6);
     }
 
     .description {
-      font-size: 14px;
+      font-size: 16px;
+      font-weight: bold;
       max-width: 90%;
-      color: #cccccc;
+      color: #ffffff;
       margin-bottom: 25px;
-      line-height: 1.6;
+      line-height: 1.7;
+      text-shadow: 0 0 10px rgba(255, 0, 0, 0.3);
+    }
+
+    /* Kotak informasi persegi elegan */
+    .info-box {
+      background: linear-gradient(180deg, #1a0000 0%, #0d0d0d 100%);
+      border: 2px solid #b30000;
+      border-radius: 20px;
+      width: 320px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 25px 0;
+      box-shadow: 0 0 25px rgba(255, 0, 0, 0.3);
+      text-align: center;
+      padding: 25px;
+      animation: glowPulse 3s infinite;
+    }
+
+    .info-box strong {
+      color: #ff3333;
+      font-size: 18px;
+      text-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
+    }
+
+    @keyframes glowPulse {
+      0% { box-shadow: 0 0 10px rgba(255,0,0,0.3); }
+      50% { box-shadow: 0 0 25px rgba(255,0,0,0.6); }
+      100% { box-shadow: 0 0 10px rgba(255,0,0,0.3); }
     }
 
     .menu {
       width: 90%;
-      max-width: 360px;
+      max-width: 380px;
       display: flex;
       flex-direction: column;
-      gap: 15px;
-      margin-top: 10px;
+      gap: 18px;
+      margin-top: 20px;
     }
 
     .menu a {
       display: flex;
       align-items: center;
+      justify-content: center;
       gap: 12px;
-      justify-content: flex-start;
-      padding: 16px;
+      padding: 18px;
       text-decoration: none;
       font-weight: bold;
       color: #fff;
-      background-color: #8b0000;
-      border-radius: 12px;
+      background: linear-gradient(135deg, #b30000 0%, #660000 100%);
+      border-radius: 14px;
       text-transform: uppercase;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      animation: pulse 2s infinite;
-      font-size: 16px;
+      transition: all 0.3s ease;
+      box-shadow: 0 0 15px rgba(255, 0, 0, 0.3);
+      font-size: 18px;
     }
 
     .menu a:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+      transform: scale(1.06);
+      box-shadow: 0 0 25px rgba(255, 0, 0, 0.6);
     }
 
     .menu a:first-child,
     .menu a:nth-child(2) {
-      font-size: 20px;
-      padding: 20px;
-      background-color: #a00000;
+      font-size: 22px;
+      padding: 22px;
+      background: linear-gradient(135deg, #ff0000 0%, #990000 100%);
+      font-weight: 700;
     }
 
     .menu-icon {
-      width: 35px;
-      height: 35px;
+      width: 38px;
+      height: 38px;
       object-fit: contain;
+      filter: drop-shadow(0 0 5px rgba(255, 0, 0, 0.6));
     }
 
-    @keyframes pulse {
-      0% { box-shadow: 0 0 5px rgba(255,0,0,0.4); }
-      50% { box-shadow: 0 0 20px rgba(255,0,0,0.8); }
-      100% { box-shadow: 0 0 5px rgba(255,0,0,0.4); }
+    footer {
+      margin-top: 40px;
+      font-size: 13px;
+      color: #aaa;
+      border-top: 1px solid #330000;
+      padding: 20px;
+      width: 100%;
+      text-align: center;
+      background-color: #0a0a0a;
+    }
+
+    /* Responsif */
+    @media (max-width: 500px) {
+      h1 { font-size: 30px; }
+      .info-box { width: 280px; padding: 20px; }
+      .menu a { font-size: 16px; }
     }
   </style>
 </head>
 <body>
+  <!-- Musik ringan otomatis -->
+  <audio autoplay loop hidden>
+    <source src="https://cdn.pixabay.com/download/audio/2023/07/28/audio_b0a4fa0d3c.mp3?filename=chillout-background-music-149506.mp3" type="audio/mpeg">
+  </audio>
+
   <div class="profile">
     <img src="profile_circle.png" alt="Kang Markus" />
   </div>
@@ -106,10 +164,13 @@
   <h1>KANGMARKUS</h1>
 
   <div class="description">
-    KANGMARKUS.COM /KANG MARKUS / ANGKA ONLINE / BET ANGKA, GAMES BOLA TERNAMA SEPERTI SBOBET SPORTS, SABA SPORTS, PINNACLE SPORTS. SLOT, LIVEGAMES SERTA PERMAINAN TEMBAK IKAN<br><br>
+    KANGMARKUS.COM / KANG MARKUS / ANGKA ONLINE / BET ANGKA, GAMES BOLA TERNAMA SEPERTI SBOBET SPORTS, SABA SPORTS, PINNACLE SPORTS. SLOT, LIVEGAMES SERTA PERMAINAN TEMBAK IKAN
+  </div>
+
+  <div class="info-box">
     <strong>HADIAH FULLBET</strong><br>
-    4D x 10.000 / 3D x 1.000 / 2D x 100 (Termasuk TOTOMACAU)<br><br>
-    <strong>Minimal Deposit Rp.10,000 dan Withdraw Rp.50,000</strong><br>
+    4D x 10.000 / 3D x 1.000 / 2D x 100<br>(Termasuk TOTOMACAU)<br><br>
+    <strong>Minimal Deposit Rp.10,000<br>dan Withdraw Rp.50,000</strong><br><br>
     AMAN DAN AMANAH
   </div>
 
@@ -132,13 +193,13 @@
     <a href="https://www.youtube.com/@kangmarkuss" target="_blank">
       <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> YouTube
     </a>
-       <a href="https://kangmarkus.com" target="_blank">
+    <a href="https://kangmarkus.com" target="_blank">
       <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> WA 0817-1730-3255
     </a>
   </div>
 
   <footer>
-    &copy; 2025 Kangmarkus.com | Semua Hak Dilindungi  | © Copyright 2014 - 2025 Kangmarkus 
+    &copy; 2025 Kangmarkus.com | Semua Hak Dilindungi | © Copyright 2014 - 2025 Kangmarkus
   </footer>
 </body>
 </html>
