--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KANGMARKUS</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     /* ===== Reset & Base ===== */
@@ -34,7 +34,7 @@
 
     /* ===== Heading ===== */
     h1 {
-      font-size: 38px;
+      font-size: 40px;
       margin: 20px 0 10px 0;
       color: #ff1a1a;
       letter-spacing: 1.5px;
@@ -56,11 +56,11 @@
     .info-box {
       background: linear-gradient(180deg, #1a0000 0%, #0d0d0d 100%);
       border: 2px solid #b30000;
-      border-radius: 18px;
-      width: 320px;
-      padding: 20px 15px;
+      border-radius: 20px;
+      width: 340px;
+      padding: 22px 18px;
       margin: 20px 0;
-      box-shadow: 0 0 20px rgba(255,0,0,0.3);
+      box-shadow: 0 0 25px rgba(255,0,0,0.3);
       text-align: center;
       line-height: 1.4;
       font-size: 15px;
@@ -71,72 +71,90 @@
     }
     .info-box strong {
       color: #ff3333;
-      font-size: 17px;
+      font-size: 18px;
       font-weight: 700;
       letter-spacing: 0.4px;
-      text-shadow: 0 0 8px rgba(255,0,0,0.5);
+      text-shadow: 0 0 10px rgba(255,0,0,0.5);
     }
     @keyframes glowPulse {
       0% { box-shadow: 0 0 10px rgba(255,0,0,0.3); }
-      50% { box-shadow: 0 0 25px rgba(255,200,200,0.4); }
+      50% { box-shadow: 0 0 30px rgba(255,200,200,0.4); }
       100% { box-shadow: 0 0 10px rgba(255,0,0,0.3); }
     }
 
     /* ===== Menu ===== */
     .menu {
-      width: 90%; max-width: 380px;
+      width: 90%; max-width: 400px;
       display: flex;
       flex-direction: column;
-      gap: 18px;
-      margin-top: 20px;
+      gap: 20px;
+      margin-top: 25px;
     }
     .menu a {
       display: flex;
       align-items: center;
       gap: 12px;
-      padding: 18px;
+      padding: 20px;
       text-decoration: none;
       font-weight: bold;
       color: #fff;
       background: linear-gradient(135deg, #b30000 0%, #660000 100%);
-      border-radius: 14px;
+      border-radius: 16px;
       text-transform: uppercase;
       transition: all 0.3s ease;
       box-shadow: 0 0 15px rgba(255,0,0,0.3);
       font-size: 18px;
-      letter-spacing: 0.5px;
+      letter-spacing: 0.6px;
+      position: relative;
+      overflow: hidden;
       animation: float 4s ease-in-out infinite alternate;
     }
-    .menu a:first-child,
-    .menu a:nth-child(2) {
-      font-size: 20px; padding: 22px;
-      background: linear-gradient(135deg, #ff0000 0%, #990000 100%);
+
+    /* Tombol utama lebih besar & elegan */
+    .menu a.primary {
+      font-size: 22px;
+      padding: 25px 22px;
       font-weight: 700;
+      background: linear-gradient(135deg, #ff0000 0%, #990000 100%);
       animation: softPulse 3s infinite, float 4s ease-in-out infinite alternate;
     }
-    .menu a:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 25px rgba(255,150,150,0.5), 0 0 15px rgba(255,255,255,0.3);
+
+    /* Efek light sweep cinematic saat hover */
+    .menu a::after {
+      content: '';
+      position: absolute;
+      top: 0; left: -75%;
+      width: 50%; height: 100%;
+      background: linear-gradient(120deg, rgba(255,255,255,0.0) 0%, rgba(255,255,255,0.3) 50%, rgba(255,255,255,0.0) 100%);
+      transform: skewX(-25deg);
+      transition: all 0.7s ease-in-out;
     }
+    .menu a:hover::after { left: 125%; }
+
+    .menu a:hover {
+      transform: scale(1.06);
+      box-shadow: 0 0 28px rgba(255,150,150,0.5), 0 0 18px rgba(255,255,255,0.3);
+    }
+
     .menu-icon {
-      width: 38px; height: 38px;
+      width: 40px; height: 40px;
       object-fit: contain;
       filter: drop-shadow(0 0 5px rgba(255,0,0,0.6));
     }
 
     @keyframes softPulse {
-      0%,100% { box-shadow: 0 0 15px rgba(255,0,0,0.3); }
-      50% { box-shadow: 0 0 30px rgba(255,200,200,0.5); }
+      0%,100% { box-shadow: 0 0 18px rgba(255,0,0,0.3); }
+      50% { box-shadow: 0 0 35px rgba(255,200,200,0.5); }
     }
     @keyframes float {
       0% { transform: translateY(0); }
-      50% { transform: translateY(-5px); }
+      50% { transform: translateY(-6px); }
       100% { transform: translateY(0); }
     }
 
     /* ===== Footer ===== */
     footer {
-      margin-top: 40px;
+      margin-top: 45px;
       font-size: 13px;
       color: #aaa;
       border-top: 1px solid #330000;
@@ -148,9 +166,10 @@
 
     /* ===== Responsive ===== */
     @media (max-width: 500px) {
-      h1 { font-size: 30px; }
+      h1 { font-size: 32px; }
       .info-box { width: 280px; padding: 20px; }
-      .menu a { font-size: 16px; }
+      .menu a { font-size: 16px; padding: 16px; }
+      .menu a.primary { font-size: 20px; padding: 20px; }
     }
   </style>
 </head>
@@ -180,13 +199,13 @@
   </div>
 
   <div class="menu">
-    <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank">
+    <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank" class="primary">
       <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> LOGIN
     </a>
-    <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank">
+    <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank" class="primary">
       <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> LOGIN ALTERNATIF
     </a>
-    <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank">
+    <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank" class="primary">
       <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> DAFTAR
     </a>
     <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank">
