--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
   <div class="info-box">
     <strong>HADIAH FULLBET</strong><br>
-    4D x 10.000 / 3D x 1.000 / 2D x 100<br>(Termasuk TOTOMACAU)<br><br>
+    4D x 10.000 / 2D x 100<br>(Termasuk TOTOMACAU)<br><br>
     <strong>Minimal Deposit Rp.10,000<br>dan Withdraw Rp.50,000</strong><br><br>
     AMAN DAN AMANAH
   </div>
@@ -218,12 +218,12 @@
       <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> YOUTUBE
     </a>
     <a href="https://kangmarkus.com" target="_blank">
-      <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> WA 0817-1730-3255
+      <img src="logo-removebg-preview.png" class="menu-icon" alt="Logo" /> WA 0812-6666-6347
     </a>
   </div>
 
   <footer>
-    &copy; 2025 Kangmarkus.com | Semua Hak Dilindungi | © Copyright 2014 - 2025 Kangmarkus
+    &copy; 2025 Kangmarkus.com | Semua Hak Dilindungi | © Copyright 2014 - 2030 Kangmarkus
   </footer>
 
 </body>
