--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>KANGMARKUS</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
@@ -18,6 +19,7 @@
       min-height: 100vh;
       overflow-x: hidden;
       position: relative;
+      overflow-y: auto;
     }
 
     /* ===== Profile ===== */
@@ -75,6 +77,7 @@
       letter-spacing: 0.4px;
       text-shadow: 0 0 10px rgba(255,0,0,0.5);
     }
+
     @keyframes infoGlow {
       0% { box-shadow: 0 0 15px rgba(255,0,0,0.3); }
       50% { box-shadow: 0 0 30px rgba(255,200,200,0.4); }
@@ -144,6 +147,26 @@
       background-color: #0a0a0a;
     }
 
+    /* ===== Bola jatuh ===== */
+    .falling-ball {
+      position: fixed;
+      top: -50px;
+      width: 32px;
+      height: 32px;
+      background: url('favicon.png') no-repeat center / contain;
+      pointer-events: none;
+      animation: fall linear forwards;
+      z-index: 0;
+      opacity: 0.9;
+    }
+
+    @keyframes fall {
+      to {
+        transform: translateY(100vh) rotate(360deg);
+        opacity: 0;
+      }
+    }
+
     @media (max-width: 500px) {
       h1 { font-size: 32px; }
       .info-box { width: 280px; padding: 20px; }
@@ -185,5 +208,19 @@
     &copy; 2025 Kangmarkus.com | Semua Hak Dilindungi | ©Copyright 2014 - 2029 Kangmarkus
   </footer>
 
+  <script>
+    // Efek bola jatuh
+    function createFallingBall() {
+      const ball = document.createElement('div');
+      ball.classList.add('falling-ball');
+      ball.style.left = Math.random() * window.innerWidth + 'px';
+      ball.style.animationDuration = (4 + Math.random() * 4) + 's';
+      document.body.appendChild(ball);
+
+      setTimeout(() => ball.remove(), 8000);
+    }
+
+    setInterval(createFallingBall, 700);
+  </script>
 </body>
 </html>
