--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       top: -50px;
       width: 32px;
       height: 32px;
-      background: url('favicon.png') no-repeat center / contain;
+      background: url('logo-removebg-preview (2).png') no-repeat center / contain;
       pointer-events: none;
       animation: fall linear forwards;
       z-index: 0;
