--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     }
 
     .description {
-      font-size: 15px; font-weight: 600;
+      font-size: 13px; font-weight: 600;
       max-width: 90%;
       color: #fff;
       margin-bottom: 25px;
-      line-height: 1.6;
+      line-height: 1.5;
       text-align: center;
-      text-shadow: 0 0 10px rgba(255,0,0,0.3);
+      text-shadow: 0 0 10px rgba(255,0,0,0.6);
     }
 
     /* ===== Info Box (Elegan: hanya garis atas-bawah) ===== */
@@ -210,8 +210,7 @@
   <h1>KANGMARKUS</h1>
 
   <div class="description">
-    KANGMARKUS.COM / KANGMARKUS / ANGKA ONLINE / BET ANGKA, GAMES BOLA TERNAMA SEPERTI SBOBET SPORTS, SABA SPORTS, PINNACLE SPORTS. SLOT, LIVEGAMES SERTA PERMAINAN TEMBAK IKAN
-  </div>
+    KANGMARKUS.COM / KANGMARKUS / ANGKA ONLINE / BETANGKA / GAMES BOLA / SLOT / LIVEGAMES SERTA PERMAINAN TEMBAK IKAN
   <div class="info-box">
     <strong>HADIAH FULLBET</strong><br>
     4D x 10.000 / 2D x 100<br>(Termasuk TOTOMACAU)<br><br>
@@ -219,7 +218,6 @@
     AMAN DAN AMANAH
     DAFTAR DAN JOIN SEKARANG, MARI KITA MENANG BERSAMA!
   </div>
-
   <div class="menu">
     <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN</a>
     <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN ALTERNATIF</a>
