--- a/index.html
+++ b/index.html
@@ -19,17 +19,23 @@
       min-height: 100vh;
       overflow-x: hidden;
       position: relative;
-      overflow-y: auto;
+      animation: fadeInBody 1.2s ease forwards;
+      opacity: 0;
+    }
+
+    @keyframes fadeInBody {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     /* ===== Profile ===== */
-    .profile { margin-top: 40px; }
+    .profile { margin-top: 40px; animation: fadeIn 1.6s ease forwards; opacity: 0; }
     .profile img {
       width: 160px; height: 160px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid #b30000;
-      box-shadow: 0 0 25px rgba(255,0,0,0.6);
+      border: 4px solid #800000;
+      box-shadow: 0 0 20px rgba(200,0,0,0.6);
       transition: transform 0.4s ease;
       animation: float 4s ease-in-out infinite alternate;
     }
@@ -38,37 +44,42 @@
     h1 {
       font-size: 40px;
       margin: 20px 0 10px 0;
-      color: #ff1a1a;
+      color: #e61a1a;
       letter-spacing: 1.5px;
-      text-shadow: 0 0 15px rgba(255,0,0,0.6);
-      animation: float 3.5s ease-in-out infinite alternate;
+      text-shadow: 0 0 12px rgba(255,0,0,0.5);
+      animation: fadeIn 1.8s ease forwards;
+      opacity: 0;
     }
 
     .description {
-      font-size: 13px; font-weight: 600;
+      font-size: 15px; font-weight: 600;
       max-width: 90%;
       color: #fff;
       margin-bottom: 25px;
-      line-height: 1.5;
+      line-height: 1.6;
       text-align: center;
-      text-shadow: 0 0 10px rgba(255,0,0,0.6);
+      text-shadow: 0 0 10px rgba(255,0,0,0.3);
+      animation: fadeIn 2s ease forwards;
+      opacity: 0;
     }
 
     /* ===== Info Box (Elegan: hanya garis atas-bawah) ===== */
     .info-box {
       position: relative;
-      text-align: center;
+      text-align: justify; /* rata kanan kiri */
       width: 340px;
-      padding: 18px 10px;
+      padding: 18px 14px;
       margin: 20px 0;
       font-size: 14px;
       color: #fff;
       letter-spacing: 0.4px;
       line-height: 1.3;
       text-transform: uppercase;
+      animation: fadeIn 2.2s ease forwards;
+      opacity: 0;
     }
 
-    /* Garis atas dan bawah merah berkilau */
+    /* Garis atas dan bawah merah lembut berkilau */
     .info-box::before,
     .info-box::after {
       content: "";
@@ -76,16 +87,16 @@
       left: 0;
       width: 100%;
       height: 2px;
-      background: linear-gradient(90deg, rgba(255,0,0,0), #ff1a1a, rgba(255,0,0,0));
-      box-shadow: 0 0 15px rgba(255,0,0,0.7);
+      background: linear-gradient(90deg, rgba(255,0,0,0), #e61a1a, rgba(255,0,0,0));
+      box-shadow: 0 0 12px rgba(255,0,0,0.6);
       animation: lineGlow 3s ease-in-out infinite alternate;
     }
     .info-box::before { top: 0; }
     .info-box::after { bottom: 0; }
 
-    /* Efek teks gradasi lembut */
+    /* Efek teks gradasi halus */
     .info-box strong {
-      background: linear-gradient(90deg, #ff3333, #ffaaaa, #ff3333);
+      background: linear-gradient(90deg, #ff4040, #ffaaaa, #ff4040);
       background-size: 200%;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -93,7 +104,9 @@
       font-size: 15px;
       font-weight: 700;
       letter-spacing: 0.6px;
-      text-shadow: 0 0 8px rgba(255, 0, 0, 0.4);
+      text-shadow: 0 0 6px rgba(255,0,0,0.3);
+      display: block;
+      text-align: center;
     }
 
     @keyframes shineText {
@@ -104,7 +117,7 @@
 
     @keyframes lineGlow {
       0% { opacity: 0.7; box-shadow: 0 0 8px rgba(255,0,0,0.4); }
-      50% { opacity: 1; box-shadow: 0 0 18px rgba(255,100,100,0.6); }
+      50% { opacity: 1; box-shadow: 0 0 18px rgba(255,100,100,0.5); }
       100% { opacity: 0.7; box-shadow: 0 0 8px rgba(255,0,0,0.4); }
     }
 
@@ -115,6 +128,8 @@
       flex-direction: column;
       gap: 20px;
       margin-top: 25px;
+      animation: fadeIn 2.6s ease forwards;
+      opacity: 0;
     }
     .menu a {
       display: flex;
@@ -124,13 +139,13 @@
       text-decoration: none;
       font-weight: bold;
       color: #fff;
-      background: linear-gradient(135deg, #b30000 0%, #660000 100%);
+      background: linear-gradient(135deg, #8b0000 0%, #400000 100%);
       border-radius: 16px;
       text-transform: uppercase;
       transition: all 0.3s ease;
-      box-shadow: 0 0 15px rgba(255,0,0,0.3);
+      box-shadow: 0 0 15px rgba(255,0,0,0.25);
       font-size: 18px;
-      letter-spacing: 0.6px;
+      letter-spacing: 0.5px;
       position: relative;
       overflow: hidden;
       animation: float 4s ease-in-out infinite alternate;
@@ -139,7 +154,7 @@
       font-size: 22px;
       padding: 25px 22px;
       font-weight: 700;
-      background: linear-gradient(135deg, #ff0000 0%, #990000 100%);
+      background: linear-gradient(135deg, #b30000 0%, #660000 100%);
       animation: softPulse 3s infinite, float 4s ease-in-out infinite alternate;
     }
     .menu a::after {
@@ -147,19 +162,24 @@
       position: absolute;
       top: 0; left: -75%;
       width: 50%; height: 100%;
-      background: linear-gradient(120deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.3) 50%, rgba(255,255,255,0) 100%);
+      background: linear-gradient(120deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.25) 50%, rgba(255,255,255,0) 100%);
       transform: skewX(-25deg);
       transition: all 0.7s ease-in-out;
     }
     .menu a:hover::after { left: 125%; }
-    .menu a:hover { transform: scale(1.06); box-shadow: 0 0 28px rgba(255,150,150,0.5),0 0 18px rgba(255,255,255,0.3); }
-    .menu-icon { width: 40px; height: 40px; object-fit: contain; filter: drop-shadow(0 0 5px rgba(255,0,0,0.6)); }
+    .menu a:hover { transform: scale(1.06); box-shadow: 0 0 25px rgba(255,120,120,0.4),0 0 15px rgba(255,255,255,0.2); }
+    .menu-icon { width: 36px; height: 36px; object-fit: contain; filter: drop-shadow(0 0 4px rgba(255,0,0,0.6)); }
 
     @keyframes softPulse {
-      0%,100% { box-shadow: 0 0 18px rgba(255,0,0,0.3); }
-      50% { box-shadow: 0 0 35px rgba(255,200,200,0.5); }
+      0%,100% { box-shadow: 0 0 18px rgba(255,0,0,0.25); }
+      50% { box-shadow: 0 0 30px rgba(255,150,150,0.4); }
     }
     @keyframes float { 0%{transform:translateY(0);}50%{transform:translateY(-6px);}100%{transform:translateY(0);} }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
     footer {
       margin-top: 45px;
@@ -170,14 +190,16 @@
       width: 100%;
       text-align: center;
       background-color: #0a0a0a;
+      animation: fadeIn 3s ease forwards;
+      opacity: 0;
     }
 
     /* ===== Bola jatuh ===== */
     .falling-ball {
       position: fixed;
       top: -50px;
-      width: 28px;
-      height: 28px;
+      width: 26px;
+      height: 26px;
       background: url('logo-removebg-preview (2).png') no-repeat center / contain;
       pointer-events: none;
       animation: fall linear forwards;
@@ -194,7 +216,7 @@
 
     @media (max-width: 500px) {
       h1 { font-size: 32px; }
-      .info-box { width: 280px; font-size: 13px; padding: 16px; }
+      .info-box { width: 280px; font-size: 13px; padding: 14px; }
       .menu a { font-size: 16px; padding: 16px; }
       .menu a.primary { font-size: 20px; padding: 20px; }
     }
@@ -210,14 +232,15 @@
   <h1>KANGMARKUS</h1>
 
   <div class="description">
-    KANGMARKUS.COM / KANGMARKUS / ANGKA ONLINE / BETANGKA / GAMES BOLA / SLOT / LIVEGAMES SERTA PERMAINAN TEMBAK IKAN
+    KANGMARKUS.COM / KANGMARKUS / ANGKA ONLINE / BETANGKA /GAMES BOLA / SLOT / LIVEGAMES SERTA PERMAINAN TEMBAK IKAN
+  </div>
   <div class="info-box">
-    <strong>HADIAH FULLBET</strong><br>
+    <strong>HADIAH FULLBET</strong>
     4D x 10.000 / 2D x 100<br>(Termasuk TOTOMACAU)<br><br>
     <strong>Minimal Deposit Rp.10,000<br>dan Withdraw Rp.50,000</strong><br><br>
     AMAN DAN AMANAH
-    DAFTAR DAN JOIN SEKARANG, MARI KITA MENANG BERSAMA!
   </div>
+
   <div class="menu">
     <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN</a>
     <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN ALTERNATIF</a>
