--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
   </div>
   <div class="info-box">
     <strong>HADIAH FULLBET</strong>
-    4D x 10.000 / 2D x 100<br>(Termasuk TOTOMACAU)<br><br>
-    <strong>Minimal Deposit Rp.10,000<br>dan Withdraw Rp.50,000</strong><br><br>
-    AMAN DAN AMANAH
+    4D x 10.000 / 3D x 1.000 / 2D x 100<br>(Termasuk TOTOMACAU)<br>
+    <strong>Minimal Deposit Rp.10,000 dan Withdraw Rp.50,000</strong><br>
+    AMAN DAN AMANAH , DAFTAR LANGSUNG DAN RASAKAN KEMENANGANNYA!
   </div>
 
   <div class="menu">
