--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
     <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LIVE CHAT ADMIN</a>
     <a href="https://www.youtube.com/watch?v=C-ajYbrGRL4" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> YOUTUBE</a>
     <a href="https://kangmarkus.com" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> WA 0817-1730-3255</a>
+    <a href="https://kangmarkus.com" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> WA 0812-4444-4966</a>
   </div>
 
   <footer>
