--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
   <div class="menu">
     <a href="https://bangun.angkabet788.life/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN</a>
     <a href="https://angkabet30294.com/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN ALTERNATIF</a>
+    <a href="https://angkabet32321.com/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LOGIN ALTERNATIF1</a>
     <a href="https://rindu.angkabet788.life/?referralid=anshun168" target="_blank" class="primary"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> DAFTAR</a>
     <a href="https://direct.lc.chat/16829148/?utm_medium=social&utm_source=heylink.me" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> LIVE CHAT ADMIN</a>
     <a href="https://rtpslotangkabet06913.com/?utm_medium=social&utm_source=heylink.me" target="_blank"><img src="logo-removebg-preview.png" class="menu-icon" alt="Logo"> RTP SLOT</a>
